--- a/NMS_LOC7_RUSSIAN.yml
+++ b/NMS_LOC7_RUSSIAN.yml
@@ -467,14 +467,14 @@ ru:
       дня<>.
     ui_network_rate_label: Скорость добычи сети %RATE%
     ui_repair_tech_desc: |-
-      <TECHNOLOGY>%TECH%<>. Статус: <FUEL>критическое повреждение<>. Чтобы восстановить работу, отремонтируйте все подкомпоненты.
+      <TECHNOLOGY>%TECH%<>, статус — <FUEL>критическое повреждение<>. Для восстановления почините все подкомпоненты.
 
-      Для ремонта этого подкомпонента требуется: <TECHNOLOGY>%NUM% х %ITEM%<>. Воспользуйтесь <IMG>TECHMENU<>, чтобы <STELLAR>закрепить<> подробные <STELLAR>инструкции для ремонта<> в журнале заданий, включая информацию о том, где можно найти требуемые предметы.
+      Для ремонта этого подкомпонента требуется <TECHNOLOGY>%ITEM% (%NUM%)<>. Воспользуйтесь <IMG>FE_TRANSFER<>, чтобы <STELLAR>закрепить<> подробные <STELLAR>инструкции для ремонта<> в журнале заданий, включая информацию о том, где можно найти нужные предметы.
     ui_repair_tech_sub: Поврежденный подкомпонент
     ui_install_tech_desc: |-
-      Подкомпонент <TECHNOLOGY>%TECH%<>. Статус: <FUEL>удален<>. Установите все подкомпоненты, чтобы завершить установку.
+      Подкомпонент <TECHNOLOGY>%TECH%<>, статус — <FUEL>отсутствует<>. Установите все подкомпоненты, чтобы завершить установку.
 
-      Для завершения установки этого подкомпонента требуется: <TECHNOLOGY>%NUM% х %ITEM%<>. Воспользуйтесь <IMG>TECHMENU<>, чтобы <STELLAR>закрепить<> подробные <STELLAR>инструкции для установки<> в журнале заданий, включая информацию о том, где можно найти требуемые предметы.
+      Для завершения установки этого подкомпонента требуется <TECHNOLOGY>%ITEM% (%NUM%)<>. Воспользуйтесь <IMG>FE_TRANSFER<>, чтобы <STELLAR>закрепить<> подробные <STELLAR>инструкции для установки<> в журнале заданий, включая информацию о том, где можно найти нужные предметы.
     ui_install_tech_name: ДЕТАЛЬ ТЕХНОЛОГИИ %TECH%
     ui_install_tech_sub: Требуемый подкомпонент
     ui_repaired_tech_desc: |-
@@ -7279,8 +7279,8 @@ ru:
     ui_exped_visit_planet_desc_d: Осмотрите планету
     ui_exped_visit_planet_obj: Приземлиться на планету
     ui_exped_visit_planet_obj_tip: Управляя своим звездолетом, сканируйте миры из
-      космоса с помощью <IMG>SCAN<>. Сканирование позволит узнать важные данные о
-      планете.
+      космоса с помощью <IMG>SHIPSCAN<>. Сканирование позволит узнать важные данные
+      о планете.
     ui_exped_visit_planet_msg1: |-
       Высадитесь на планету.
       Войдите на свой <TECHNOLOGY>звездолет<>, чтобы начать поиск.
@@ -7289,7 +7289,7 @@ ru:
       Удерживайте <IMG>THRUST<>, чтобы взлететь.
     ui_exped_visit_planet_msg3: |-
       Высадитесь на планету.
-      Сканируйте миры с помощью <IMG>SCAN<>, чтобы найти подходящее для посадки место.
+      Сканируйте миры с помощью <IMG>SHIPSCAN<>, чтобы найти подходящее для посадки место.
     ui_warp_freighter_name: Включить двигатели
     ui_warp_freighter_name_u: ВКЛЮЧИТЬ ДВИГАТЕЛИ
     ui_warp_freighter_desc: Отправьтесь в другую систему на своем крупном корабле
