--- a/NMS_LOC7_KOREAN.yml
+++ b/NMS_LOC7_KOREAN.yml
@@ -450,12 +450,12 @@ ko:
     ui_repair_tech_desc: |-
       <TECHNOLOGY>%TECH%<> 상태: <FUEL>치명적 손상<>. 각 보조 부품을 수리하여 기능을 복구해야 합니다.
 
-      <TECHNOLOGY>%NUM% x %ITEM%(으)로 이 보조 부품을 수리하십시오<>. <IMG>TECHMENU<>을(를) 사용해 필요한 아이템을 찾을 수 있는 곳에 대한 정보를 포함하여 자세한 <STELLAR>수리 세부사항<>을 임무 기록에 <STELLAR>고정<>하십시오.
+      <TECHNOLOGY>%NUM% x %ITEM%<>(으)로 이 보조 부품을 수리하십시오. <IMG>FE_TRANSFER<>을(를) 사용해 필요한 아이템을 찾을 수 있는 곳에 대한 정보를 포함한 자세한 <STELLAR>수리 세부사항<>을 임무 기록에 <STELLAR>고정<>하십시오.
     ui_repair_tech_sub: 손상된 보조 부품
     ui_install_tech_desc: |-
       <TECHNOLOGY>%TECH%<> 보조 부품 상태: <FUEL>제거됨<>. 모든 보조 부품을 끼워 넣어 설치를 완료하십시오.
 
-      <TECHNOLOGY>%NUM% x %ITEM%(으)로 이 보조 부품을 완성하십시오<>. <IMG>TECHMENU<>을(를) 사용해 필요한 아이템을 찾을 수 있는 곳에 대한 정보를 포함하여 자세한 <STELLAR>설치 세부사항<>을 임무 기록에 <STELLAR>고정<>하십시오.
+      <TECHNOLOGY>%NUM% x %ITEM%<>(으)로 이 보조 부품을 완성하십시오. <IMG>FE_TRANSFER<>을(를) 사용해 필요한 아이템을 찾을 수 있는 곳에 대한 정보를 포함한 자세한 <STELLAR>설치 세부사항<>을 임무 기록에 <STELLAR>고정<>하십시오.
     ui_install_tech_name: "%TECH% 부품"
     ui_install_tech_sub: 필요한 보조 부품
     ui_repaired_tech_desc: |-
@@ -6896,8 +6896,8 @@ ko:
     ui_exped_visit_planet_desc: 지상에 상륙하기
     ui_exped_visit_planet_desc_d: 행성 조사 완료
     ui_exped_visit_planet_obj: 행성에 착륙하기
-    ui_exped_visit_planet_obj_tip: 함선을 타고 비행하는 동안 우주에서 <IMG>SCAN<>으로 세계를 스캔하십시오. 스캔하면
-      행성의 주요 세부 정보가 표시됩니다.
+    ui_exped_visit_planet_obj_tip: 함선을 타고 비행하는 동안 우주에서 <IMG>SHIPSCAN<>으로 세계를 스캔하십시오.
+      스캔하면 행성의 주요 세부 정보가 표시됩니다.
     ui_exped_visit_planet_msg1: |-
       행성에 상륙하기
       <TECHNOLOGY>함선<>으로 들어가 수색 시작하기
@@ -6906,7 +6906,7 @@ ko:
       <IMG>THRUST<>를 길게 눌러 이륙하기
     ui_exped_visit_planet_msg3: |-
       행성에 상륙하기
-      <IMG>SCAN<>으로 세계를 스캔하여 적합한 착륙 지점 찾기
+      <IMG>SHIPSCAN<>으로 세계를 스캔하여 적합한 착륙 지점 찾기
     ui_warp_freighter_name: 엔진 작동 개시
     ui_warp_freighter_name_u: 엔진 작동 개시
     ui_warp_freighter_desc: 주력함으로 워프 완료하기
